--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .page{
     margin: auto;
     width: 1000px;
-    height: 1024px;
+    height: 2000px;
     border: grey solid 2px;
 
 }
@@ -72,3 +72,32 @@
     margin-top: 40px;
 }
 /* End Main*/
+/* Start footer*/
+footer{
+    margin-top: 25px;
+    margin-left: 12px;
+}
+.title{
+    color: grey;
+
+}
+.image{
+    margin-top: 15px;
+}
+.image_monitor{
+    background-image: url(img/monitor.jpg);
+    height: 185px;
+    width: 265px;
+    color: rgb(255, 255, 255);
+    padding-left: 10px;
+    line-height: 50px;
+}
+.image_graph{
+    margin-top: 15px;
+    background-image: url(img/graph.jpg);
+    height: 185px;
+    width: 265px;
+    color: rgb(255, 255, 255);
+    padding-left: 10px;
+    line-height: 50px;
+}
